Actualizar index.html

--- a/html/index.html
+++ b/html/index.html
@@ -26,9 +26,9 @@
         <LI>MOSNTRITO</LI>
         <LI>CHAUFA CON ALITAS</LI>
         <LI>BROASTHER DEL INSTITUTO</LI>
-        <LI></LI>
-        <LI></LI>
-        <LI></LI>
+        <LI>AJI DE GALLINA</LI>
+        <LI>CARAPULCRA</LI>
+        <LI>ESTOFADO DE RES</LI>
         <LI></LI>
         <LI></LI>
         <LI></LI>
